--- a/circle.yml
+++ b/circle.yml
@@ -12,7 +12,8 @@ test:
 
 deployment:
   release:
-    tag: /[0-9]+\.[0-9]+\.[0-9]+/
+    # tag: /[0-9]+\.[0-9]+\.[0-9]+/
+    branch: master
     commands:
       - echo -e "[web]\n${PRODUCTION_DEPLOY_HOST}" > inventory.yml
       - >
